# maturita

./: README.md  diagram.drawio  rychtar-zaverecna-prace.docx
Django/: .gitignore
Django/uzak_web/templates/: base.html
Raspberry/: CMakeLists.txt  main.c  main.h  sensor.c
Raspberry/DS18B20/: CMakeCache.txt  CMakeLists.txt  DS18B20Reader  Makefile  cmake_install.cmake  command.txt  main.c
Raspberry/DS18B20 - Docker/: CMakeLists.txt  Dockerfile  Makefile  main.h
Raspberry/TM1637/: CMakeCache.txt  CMakeLists.txt  Display  Makefile  clock.c  cmake_install.cmake
Raspberry/Temp_on_Display/: CMakeLists.txt  main.c  main.h  sensor.h  tm1637.h
Raspberry/Temp_on_Display/cmake-files/: CMakeCache.txt  Display  Makefile
Raspberry/cmake-files/: CMakeCache.txt  Display  Makefile  Teplomer  cmake_install.cmake
Server/: docker-compose.yml
python_skripty/: mqtt.py  mqtt_pub.py  mqtt_pub_c.c  mqtt_subscriber.py.save
python_skripty/paho_mqtt-1.6.1.dist-info/: RECORD  WHEEL
rychtar_uzak/: .gitignore  README.rst  local.yml  manage.py  production.yml  setup.cfg
rychtar_uzak/.envs/.local/: .postgres
rychtar_uzak/compose/production/traefik/: traefik.yml
rychtar_uzak/config/: urls.py  wsgi.py
rychtar_uzak/config/settings/: base.py  local.py  production.py  test.py
rychtar_uzak/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
rychtar_uzak/requirements/: local.txt
rychtar_uzak/rychtar_uzak/: conftest.py
rychtar_uzak/rychtar_uzak/templates/: base.html
rychtar_uzak/rychtar_uzak/users/: admin.py  apps.py  models.py  urls.py
(+6 files in other folders)
