cmake_minimum_required(VERSION 3.16)
project(Teplomer)
find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
find_package(PkgConfig REQUIRED)
pkg_check_modules(Mosquitto REQUIRED IMPORTED_TARGET libmosquitto)
set(SOURCE main.c sensor.c sensor.h tm1637.h)
set(CMAKE_BUILD_TYPE Debug)
add_executable(Teplomer ${SOURCE})
target_link_libraries(Teplomer ${WIRINGPI_LIBRARIES} PkgConfig::Mosquitto)

